# libexif

./: meson.build
